升级组件版本